[package]
name = "wpguproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12" #wgpu package
cgmath = "0.18" #linear algebra and mathematics library fpr comp graphics
env_logger = "0.9"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23" #imaging library provides basic filters and decoders for common inage formats use for txture mapping
log = "0.4"
pollster = "0.2" #minimal async executor block threads untile a future completes
winit = "0.25" #cross platform window creation library
bytemuck = {version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8.0"
