[package]
name = "wpguproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.2"
winit = "0.28"
bytemuck = { version = "1.4", features = ["derive"] }
srtm = "0.1.1"